Changed file structure

--- a/redeem.html
+++ b/redeem.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Secure Trust-less Paper Wallets</title>
-    <script type="text/javascript" src="js/redeembundle.js"></script>
+    <script type="text/javascript" src="js/bundles/redeembundle.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
 <!--qr code stuff from lasersoft-->
@@ -28,7 +28,7 @@
 <script type="text/javascript" src="js/qrcode/alignpat.js"></script>
 <script type="text/javascript" src="js/qrcode/databr.js"></script>
 <!--qr code video from https://github.com/schmich/instascan-->
-<script src="js/instascan.min.js"></script>
+<script src="js/Source-JS/instascan.min.js"></script>
 
 
 
