Started jsPDF Creation
	I started working on the creation of the PDF using jsPDF via npm.
	I stopped work to refactor qrcode creation, so that it
	can be used in a more modular manner.

--- a/generate.html
+++ b/generate.html
@@ -98,12 +98,12 @@
     <label for="2ndXpub">2nd Public Key</label>
     <input class="form-control" id="2ndXpub" placeholder="xpub8777899.....">
      <label for="numOfAdresses">Number of Adresses</label>
-    <select class="form-control" id="numOfAdresses">
+    <select class="form-control col-4 mx-auto" id="numOfAdresses">
       <option>5</option>
       <option>10</option>
       <option>15</option>
     </select>
-  <button  id="btcCreatePdf" type="submit" class="btn btn-primary mt-3 submitpdfcreate">Submit</button>
+  <button  type="button" class="btn btn-primary mt-3 " id="makeMultiSigPdf" >Submit</button>
   </div>
 
 
