Finished QR Code REader Library
Finished up the lib. Could use more refactoring.

--- a/spend.html
+++ b/spend.html
@@ -9,24 +9,6 @@
     <script type="text/javascript" src="js/bundles/spendbundle.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="js/bundles/qrCodeBundle.js"></script>
-<!--qr code stuff from lasersoft-->
-<script type="text/javascript" src="js/qrcode/grid.js"></script>
-<script type="text/javascript" src="js/qrcode/version.js"></script>
-<script type="text/javascript" src="js/qrcode/detector.js"></script>
-<script type="text/javascript" src="js/qrcode/formatinf.js"></script>
-<script type="text/javascript" src="js/qrcode/errorlevel.js"></script>
-<script type="text/javascript" src="js/qrcode/bitmat.js"></script>
-<script type="text/javascript" src="js/qrcode/datablock.js"></script>
-<script type="text/javascript" src="js/qrcode/bmparser.js"></script>
-<script type="text/javascript" src="js/qrcode/datamask.js"></script>
-<script type="text/javascript" src="js/qrcode/rsdecoder.js"></script>
-<script type="text/javascript" src="js/qrcode/gf256poly.js"></script>
-<script type="text/javascript" src="js/qrcode/gf256.js"></script>
-<script type="text/javascript" src="js/qrcode/decoder.js"></script>
-<script type="text/javascript" src="js/qrcode/qrcode.js"></script>
-<script type="text/javascript" src="js/qrcode/findpat.js"></script>
-<script type="text/javascript" src="js/qrcode/alignpat.js"></script>
-<script type="text/javascript" src="js/qrcode/databr.js"></script>
 <!--qr code video from https://github.com/schmich/instascan-->
 <script src="js/Source-JS/instascan.min.js"></script>
 
@@ -36,10 +18,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="css/custom.css">
-    <link rel="stylesheet" type="text/css" href="nouislider.css">
+<link rel="stylesheet" type="text/css" href="css/custom.css">
+<link rel="stylesheet" type="text/css" href="nouislider.css">
 
 
 
@@ -73,7 +55,7 @@
         </nav>
 </nav>
 
-<!-- Modal -->
+<!-- Qr Modal -->
 <div class="modal fade" id="ModalCenter" tabindex="-1" role="dialog" aria-labelledby="ModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
