Fixed qrcode scanner
Scanner wasnt writting to right div. So I fixed it.
Was mixing vanila js and jquery

--- a/spend.html
+++ b/spend.html
@@ -29,13 +29,6 @@
     
   </head>
   <body style="background-color: #D1ECEE">
-    <!--Header -->
-<div class="container-fluid no-margin no-padding" style="background-color: #D1ECEE">
-    <div class="jumbotron jumbotron-fluid">
-    <img src="images/banner.svg" alt="Logo" style="width:50%;height:auto;" class="mx-auto d-block">
-  </div>
-</div>
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark no-gutter">
         
 <a class="navbar-brand justify-content-left" href="../index.html" style="padding: 0;">
@@ -169,8 +162,9 @@
 
         <div class="form-group col-4">          
           <label for="1givenxpub">Extended Public keys</label>
-          <textarea class="form-control col-12" id="btcpubkeys" placeholder="" rows="3"></textarea>
-        </div>
+          <textarea class="form-control col-12 qrplace" id="btcpubkeys" placeholder="" rows="3"></textarea>
+
+      </div>
         <span class="col-1 my-auto qr m-1 p-0">
           <img class="col-md-12" src="images/qr.svg" alt="Qr Code" style="min-height: 10px;" data-toggle="modal" data-target="#ModalCenter">
         </span>
