Fixed Qrcreation to Qr Reader Workflow
Worked on workflow and lots of debugging. Major issue lay in incorrectmapping
return. Be aware. It works now though. Sloppy code but it works,
needs refacorting later. Quick and dirty testing done on desktop
via reader. Reader dose not work, need to optimize public key array fucntion.

--- a/spend.html
+++ b/spend.html
@@ -41,7 +41,7 @@
   </button>
 
         <nav class="collapse navbar-collapse navbar-toggleable-md h5 text-white text-sm-center justify-content-end " id="navbarNav">
-              <a class="nav-link hover whitetext" href="buy.html">How It Works</a>
+              <a class="nav-link hover whitetext" href="https://github.com/DecentralizeJustice/MultiSigCrypto">How It Works</a>
               <a class="nav-link hover whitetext"  href="generate.html" >Make Keys</a>
               <a class="nav-link hover whitetext" href="buy.html">Buy Wallet</a>  
               <a class="nav-link " style="color: #7588ED;" style="">Spend Wallet</a>                    
