--- a/generate.html
+++ b/generate.html
@@ -9,11 +9,13 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/custom.css">
   </head>
-  <body style="background-color: #D1ECEE;height: 100vh;">
+  
+  <body style="" class="h-100">
 
 <!--Nav bar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark no-gutter">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark no-gutter" style="">
         
 <a class="navbar-brand justify-content-left" href="https://www.decentralizejustice.com" style="padding: 0;">
 <img src="images/gold.png" alt="Logo" style="width:80px;height:auto;"></a>
@@ -33,8 +35,8 @@
 </nav>
 
 
-
-<div style="padding:1%;margin-top:7%;background-color: #ffffff;min-height: 230px;" class="col-8 mx-auto rounded">
+<div class="row h-100">
+<div style="background-color: #ffffff" class="col-7 mx-auto my-auto rounded custombigbox p-3">
 
     <div id="selectCoin" class="text-center col-md-12 mx-auto">
         <p class="h4" style="padding-top: 2%;"> Select Which Crypto You Want to Store:<p>
@@ -98,6 +100,7 @@
 
 
 
+</div>
 </div>
 
 </html>
