--- a/spend.html
+++ b/spend.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: #D1ECEE">
+<html lang="en" >
   <head>
 
     <meta charset="utf-8">
@@ -20,7 +20,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 
-
+<link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="nouislider.css">
 
 
@@ -28,8 +28,9 @@
 
     
   </head>
-  <body style="background-color: #D1ECEE">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark no-gutter">
+  <body style="" class="h-100">
+<!--Nav bar-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark no-gutter" style="">
         
 <a class="navbar-brand justify-content-left" href="../index.html" style="padding: 0;">
 <img src="images/gold.png" alt="Logo" style="width:80px;height:auto;"></a>
@@ -90,8 +91,8 @@
 
 
 
-
-<div class="col-10 mx-auto rounded" style="margin-top: 5%;margin-bottom:5% ;border: 5px solid white; padding: 0;">
+<div class="row h-100">
+<div class="col-8 mx-auto my-auto rounded bigbox" style="border: 5px solid white; padding: 0;">
 <ul class="nav nav-tabs" style="background: white;">
   <li class="nav-item">
     <a class="nav-link" id="setup">Set Up</a>
@@ -509,6 +510,8 @@
 
   </div>
 </div>
+</div>
+
 </div>
 
 
