Made Pubkey Array Qr Code 3

--- a/generate.html
+++ b/generate.html
@@ -11,7 +11,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
   </head>
-  
+
   <body style="" class="h-100">
 
 <!--Nav bar-->
@@ -35,8 +35,8 @@
 </nav>
 
 
-<div class="row h-100">
-<div style="background-color: #ffffff" class="col-7 mx-auto my-auto rounded custombigbox p-3">
+<div class="h-100">
+<div style="" class="col-7 mx-auto rounded custombigbox p-3">
 
     <div id="selectCoin" class="text-center col-md-12 mx-auto">
         <p class="h4" style="padding-top: 2%;"> Select Which Crypto You Want to Store:<p>
