--- a/spend.html
+++ b/spend.html
@@ -91,8 +91,8 @@
 
 
 
-<div class="row h-100">
-<div class="col-8 mx-auto my-auto rounded bigbox" style="border: 5px solid white; padding: 0;">
+<div class="h-100">
+<div class="col-8 mx-auto rounded bigbox" style="border: 5px solid white; padding: 0; margin-top: 23vh;">
 <ul class="nav nav-tabs" style="background: white;">
   <li class="nav-item">
     <a class="nav-link" id="setup">Set Up</a>
