--- a/spend.html
+++ b/spend.html
@@ -165,7 +165,7 @@
           <div class="col-md-12 row mt-2" >
             <div class="col-md-12">       
               <label for="1givenxpub"> 1st Public Key</label>
-              <textarea class="form-control col-md-12 qrplace " id="btcpubkeys" placeholder="" rows="1"></textarea>
+              <textarea class="form-control col-md-12 qrplace " id="0pubkey" placeholder="" rows="1"></textarea>
             </div>  
             <img class="col-md-5 qr h-50 mx-auto" src="images/qr.svg" alt="Qr Code" style="min-height: 10px;" data-toggle="modal" data-target="#ModalCenter">
           </div>
@@ -176,7 +176,7 @@
           <div class="col-md-12 row mt-2" >
             <div class="col-md-12">       
               <label for="1givenxpub"> 2nd Public Key</label>
-              <textarea class="form-control col-md-12 qrplace " id="btcpubkeys" placeholder="" rows="1"></textarea>
+              <textarea class="form-control col-md-12 qrplace " id="1pubkey" placeholder="" rows="1"></textarea>
             </div>  
             <img class="col-md-5 qr h-50 mx-auto" src="images/qr.svg" alt="Qr Code" style="min-height: 10px;" data-toggle="modal" data-target="#ModalCenter">
           </div>
@@ -187,7 +187,7 @@
           <div class="col-md-12 row mt-2" >
             <div class="col-md-12">       
               <label for="1givenxpub"> 3rd Public Key</label>
-              <textarea class="form-control col-md-12 qrplace " id="btcpubkeys" placeholder="" rows="1"></textarea>
+              <textarea class="form-control col-md-12 qrplace " id="2pubkey" placeholder="" rows="1"></textarea>
             </div>  
             <img class="col-md-5 qr h-50 mx-auto" src="images/qr.svg" alt="Qr Code" style="min-height: 10px;" data-toggle="modal" data-target="#ModalCenter">
           </div>
