Added Differnt Colors to qr.svg

--- a/spend.html
+++ b/spend.html
@@ -121,8 +121,10 @@
 
  <!--Eth-->
 
-<div id="Ethereum" class="col-2   mx-auto d-block" style="width: 100%;">
+<div id="Ethereum" class="col-3   mx-auto d-block" style="width: 100%;">
+  <div class="col-9">
   <img src="images/eth.svg" alt="Ethereum" style="width: 100%;">
+  </div>
 </div>
 
 <!--Btc-->
@@ -178,7 +180,7 @@
               <label for="1givenxpub"> 2nd Public Key</label>
               <textarea class="form-control col-md-12 qrplace " id="1pubkey" placeholder="" rows="1"></textarea>
             </div>  
-            <img class="col-md-5 qr h-50 mx-auto" src="images/qr.svg" alt="Qr Code" style="min-height: 10px;" data-toggle="modal" data-target="#ModalCenter">
+            <img class="col-md-5 qr h-50 mx-auto" src="images/qr1.svg" alt="Qr Code" style="min-height: 10px;" data-toggle="modal" data-target="#ModalCenter">
           </div>
         </div>
 
@@ -189,7 +191,7 @@
               <label for="1givenxpub"> 3rd Public Key</label>
               <textarea class="form-control col-md-12 qrplace " id="2pubkey" placeholder="" rows="1"></textarea>
             </div>  
-            <img class="col-md-5 qr h-50 mx-auto" src="images/qr.svg" alt="Qr Code" style="min-height: 10px;" data-toggle="modal" data-target="#ModalCenter">
+            <img class="col-md-5 qr h-50 mx-auto" src="images/qr2.svg" alt="Qr Code" style="min-height: 10px;" data-toggle="modal" data-target="#ModalCenter">
           </div>
         </div>
 
