Centered Eth svg

--- a/spend.html
+++ b/spend.html
@@ -119,20 +119,20 @@
  <p class="h4" style="padding-top: 2%;"> Please Select Which Crypto You Would Like to Redeem:<p>
 <div  class="row text-center justify-content-center" style="padding:5%;margin: 0%;">
 
- <!--Eth-->
 
-<div id="Ethereum" class="col-3   mx-auto d-block" style="width: 100%;">
-  <div class="col-9">
-  <img src="images/eth.svg" alt="Ethereum" style="width: 100%;">
-  </div>
-</div>
 
 <!--Btc-->
 
 <div id="Bitcoin" class="col-3 mx-auto d-block" style="width: 100%;" >
   <img src="images/bitcoin.svg" alt="Bitcoin" style="width: 100%;">
 </div>
+ <!--Eth-->
 
+<div id="Ethereum" class="col-3   mx-auto d-block" style="width: 100%;">
+  <div class="col-9 mx-auto">
+  <img src="images/eth.svg" alt="Ethereum" style="width: 100%;">
+  </div>
+</div>
   <!--Ltc-->
 <div id="Litecoin" class="col-3 mx-auto d-block" style="width: 100%;" >
     <img src="images/litecoin.svg" alt="Litecoin" style="width: 100%;">
