Added Test Cases & Got Address qr working

--- a/spend.html
+++ b/spend.html
@@ -236,12 +236,12 @@
 <!--Address to send to-->
      <div class="form-group col-8 text-center mx-auto">
       <span class="col-9 row offset-2">
-        <span class="mx-auto col-11" style="padding: 0;margin: 0">
+        <span class="mx-auto col-11 mb-3">
         <label for="1givenxpub" class="">Receiving Address</label>
-       <input  class="form-control" id="adresssend" placeholder="3b.....">
+       <input  class="form-control qrplace" id="adresssend" placeholder="3b.....">
        </span>
-       <div class="col-1 qr"  style="padding: 0%;margin: 0%;" data-toggle="modal" data-target="#ModalCenter">
-          <img class="col-12 mx-auto" src="images/qr.svg" alt="Qr Code" style="padding:0;margin-top:33px;width: 75%;height: auto; ">
+       <div class="col-1 qr my-auto"  style="padding: 0%;margin: 0%;" data-toggle="modal" data-target="#ModalCenter">
+          <img class="col-12 mx-auto my-auto" src="images/qr.svg" alt="Qr Code" style="padding:0;width: 75%;height: auto; ">
        </div>
       </span>
    
@@ -376,7 +376,7 @@
     </div>
     <div class="col-4">
       <p style="margin-bottom: 0%;padding-bottom: 0%;" class="h2">To<br>
-      <p id="sendToWhichAdressInfo" style="margin-top:2%;"></p></p>
+      <p class="" id="sendToWhichAdressInfo" style="margin-top:2%;word-wrap: break-word;"></p></p>
 
       <img src="images/mailbox.svg" alt="Address" style="width: 25%;margin-top:5%;"> 
     </div>
