--- a/spend.html
+++ b/spend.html
@@ -235,7 +235,9 @@
   
 <!--Address to send to-->
      <div class="form-group col-8 text-center mx-auto">
-      <span class="col-9 row offset-2">
+      <div class="col-12 row mx-auto">
+
+      <span class="col-6 row mx-auto">
         <span class="mx-auto col-11 mb-3">
         <label for="1givenxpub" class="">Receiving Address</label>
        <input  class="form-control qrplace" id="adresssend" placeholder="3b.....">
@@ -244,7 +246,18 @@
           <img class="col-12 mx-auto my-auto" src="images/qr.svg" alt="Qr Code" style="padding:0;width: 75%;height: auto; ">
        </div>
       </span>
-   
+
+       <span class="col-6 row mx-auto">
+        <span class="mx-auto col-11 mb-3">
+        <label for="1givenxpub" class="">Change Address</label>
+       <input  class="form-control qrplace" id="changeAddress" placeholder="3b.....">
+       </span>
+       <div class="col-1 qr my-auto"  style="padding: 0%;margin: 0%;" data-toggle="modal" data-target="#ModalCenter">
+          <img class="col-12 mx-auto my-auto" src="images/qr.svg" alt="Qr Code" style="padding:0;width: 75%;height: auto; ">
+       </div>
+      </span>
+      
+      </div>
 
 
         <p style="padding-top: 0%;" class="h4 text-center">Address Balance:<p>
