Added Pdf generation for Gen Menmonic Gen Menmonic can now generate pdfs This makes testing easeir and saving the gen phrase easier.

--- a/generate.html
+++ b/generate.html
@@ -78,7 +78,7 @@
   </div>
 </div>
 
-<div class="h-100">
+<div class="h-100 mb-5">
 <div style="" class="col-7 mx-auto rounded custombigbox p-3">
 
     <div id="selectCoin" class="text-center col-md-12 mx-auto">
@@ -126,7 +126,9 @@
           <div class="col-12 my-auto col-md-6">
           <p class="xpub h6 text-center col-12 mx-auto " style="word-wrap: break-word;text-align: center;"></p>
           </div>
-          
+        </div>
+           <div class="w-100">
+            <button  type="button" class="btn btn-primary mt-3 mb-3 mx-auto" id="generateMempdf" >PDF</button>
         </div>
   </div>
 
