--- a/spend.html
+++ b/spend.html
@@ -150,9 +150,9 @@
     <div class="row justify-content-center">
           
       <!--Address-->
-      <div class="form-group  row mt-3 ">
+      <div class="form-group  row mt-3 align-content-center">
         
-        <div class="form-group col-3 mt-2">
+    <!--     <div class="form-group col-3 mt-2">
           <label for="exampleFormControlSelect1">Address Number</label>
             <select class="form-control col-8 mx-auto" id="index">
               <option>0</option><option>1</option>
@@ -162,9 +162,9 @@
               <option>8</option><option>9</option>
             </select>
       </div>
-
-        <div class="form-group col-3 row">  
-          <div class="col-md-12 row mt-2" >
+ -->
+        <div class="form-group col-3 row mx-auto">  
+          <div class="col-md-12 row mt-2 mx-auto" >
             <div class="col-md-12">       
               <label for="1givenxpub"> 1st Public Key</label>
               <textarea class="form-control col-md-12 qrplace " id="0pubkey" placeholder="" rows="1"></textarea>
@@ -174,8 +174,8 @@
         </div>
 
 
-        <div class="form-group col-3 row">  
-          <div class="col-md-12 row mt-2" >
+        <div class="form-group col-3 row mx-auto">  
+          <div class="col-md-12 row mt-2 mx-auto" >
             <div class="col-md-12">       
               <label for="1givenxpub"> 2nd Public Key</label>
               <textarea class="form-control col-md-12 qrplace " id="1pubkey" placeholder="" rows="1"></textarea>
@@ -185,8 +185,8 @@
         </div>
 
 
-        <div class="form-group col-3 row">  
-          <div class="col-md-12 row mt-2" >
+        <div class="form-group col-3 row mx-auto">  
+          <div class="col-md-12 row mt-2 mx-auto" >
             <div class="col-md-12">       
               <label for="1givenxpub"> 3rd Public Key</label>
               <textarea class="form-control col-md-12 qrplace " id="2pubkey" placeholder="" rows="1"></textarea>
