Halfway Through Transinfo Refactoring
Decided to change transinfo basic to accomadte more transactiosn
in the future

--- a/spend.html
+++ b/spend.html
@@ -234,12 +234,12 @@
    
   
 <!--Address to send to-->
-     <div class="form-group col-8 text-center mx-auto">
-      <div class="col-12 row mx-auto">
+     <div class="form-group col-8 text-center mx-auto pt-3">
+      <div class="col-12 row mx-auto ">
 
-      <span class="col-6 row mx-auto">
+      <span class="col-6 row mx-auto ">
         <span class="mx-auto col-11 mb-3">
-        <label for="1givenxpub" class="">Receiving Address</label>
+        <label for="adresssend" class="">Address To Send To</label>
        <input  class="form-control qrplace" id="adresssend" placeholder="3b.....">
        </span>
        <div class="col-1 qr my-auto"  style="padding: 0%;margin: 0%;" data-toggle="modal" data-target="#ModalCenter">
@@ -249,12 +249,9 @@
 
        <span class="col-6 row mx-auto">
         <span class="mx-auto col-11 mb-3">
-        <label for="1givenxpub" class="">Change Address</label>
-       <input  class="form-control qrplace" id="changeAddress" placeholder="3b.....">
+        <label for="1givenxpub" class="">Amount To Send</label>
+       <input  class="form-control qrplace" id="receivingAmount" placeholder="3b.....">
        </span>
-       <div class="col-1 qr my-auto"  style="padding: 0%;margin: 0%;" data-toggle="modal" data-target="#ModalCenter">
-          <img class="col-12 mx-auto my-auto" src="images/qr.svg" alt="Qr Code" style="padding:0;width: 75%;height: auto; ">
-       </div>
       </span>
       
       </div>
